@@ -45,6 +45,7 @@
  *  289:     function replaceMarkersInSQL($sql, $table, $row)
  *  331:     function selectItemsTCA($params)
  *  425:     function updateHotlist ($table, $indexValue, $indexField='', $app='')
+ *  492:     function &fetchCountries($country, $iso2='', $iso3='', $isonr='')
  *
  * TOTAL FUNCTIONS: 11
  * (This index is automatically created/updated by the extension "extdeveval")
@@ -476,6 +477,51 @@ class tx_staticinfotables_div {
 				}
 			}
 		}
+	}
+
+	/**
+	 * Get a list of countries by specific parameters or parts of names of countries
+	 * in different languages. Parameters might be left empty.
+	 *
+	 * @param	string		a name of the country or a part of it in any language
+	 * @param	string		ISO alpha-2 code of the country
+	 * @param	string		ISO alpha-3 code of the country
+	 * @param	array		Database row.
+	 * @return	array		Array of rows of country records
+	 */
+	function &fetchCountries($country, $iso2='', $iso3='', $isonr='')	{
+		$rcArray = array();
+		$where = '';
+
+		$table = 'static_countries';
+		if ($country != '')	{
+			$value = $GLOBALS['TYPO3_DB']->fullQuoteStr(trim('%'.$country.'%'),$table);
+			$where = 'cn_official_name_local LIKE '.$value.' OR cn_official_name_en LIKE '.$value.' OR cn_short_local LIKE '.$value;
+		}
+
+		if ($isonr != '')	{
+			$where = 'cn_iso_nr='.$GLOBALS['TYPO3_DB']->fullQuoteStr(trim($isonr),$table);
+		}
+
+		if ($iso2 != '')	{
+			$where = 'cn_iso_2='.$GLOBALS['TYPO3_DB']->fullQuoteStr(trim($iso2),$table);
+		}
+
+		if ($iso3 !='')	{
+			$where = 'cn_iso_3='.$GLOBALS['TYPO3_DB']->fullQuoteStr(trim($iso3),$table);
+		}
+
+		if ($where != '')	{
+			$res = $GLOBALS['TYPO3_DB']->exec_SELECTquery('*', $table, $where);
+
+			if ($res)	{
+				while ($row = $GLOBALS['TYPO3_DB']->sql_fetch_assoc($res))	{
+					$rcArray[] = $row;
+				}
+			}
+		}
+
+		return $rcArray;
 	}
 }
 
