@@ -1,3 +1,6 @@
+2007-07-17  Franz Holzinger  <kontakt@fholzinger.com>
+	* new function fetchCountries to get a list of countries which match the parameters
+
 2007-06-19  David Bruehlmeier <typo3@bruehlmeier.com> 
 	* Updated static_markets
 
